--- a/roommatesneu/backend/.env
+++ b/roommatesneu/backend/.env
@@ -1,3 +1,3 @@
-ROOMMATES_DB_URI=mongodb+srv://VictorSunderland:roommatesneu2@cluster0.m59kj.mongodb.net/sample_roommates?retryWrites=true&w=majority
+ROOMMATES_DB_URI=mongodb+srv://VictorSunderland:oasis@cluster0.m59kj.mongodb.net/sample_roommates?retryWrites=true&w=majority
 ROOMATES_NS=sample_roommates
-PORT=3000
+PORT=5000
